--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>VUE</title>
   </head>
   <body>
     <div id="app">
       <h1>Список задач</h1>
-      <div>Осталось сделать задач: <span class="counter">2</span></div>
+      <div>Осталось сделать задач: <span class="counter">{{tasks.length}}</span></div>
       <div class="list">
         <div class="item" v-for="task in tasks">
           <input type="checkbox" />
           {{task}}
+        </div>
+        <div class="item done" v-for="doneTask in doneTasks">
+          <input type="checkbox" />
+          {{doneTask}}
         </div>
       </div>
       <div class="form">
