fix: comlete 1 task

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           {{task}}
         </div>
         <div class="item done" v-for="doneTask in doneTasks">
-          <input type="checkbox" />
+          <input type="checkbox" checked />
           {{doneTask}}
         </div>
       </div>
